--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_nav_bar: ^5.0.6
+  intl: ^0.19.0
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.14.0
+  google_sign_in: ^6.1.6
+  firebase_messaging: ^14.7.10
+  firebase_storage: ^11.6.0
+  firebase_auth: ^4.16.0
 
 dev_dependencies:
   flutter_test:
