--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ migrate_working_dir/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+android/app/google-services.json
 .packages
 .pub-cache/
 .pub/
