--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_messaging: ^14.7.10
   firebase_storage: ^11.6.0
   firebase_auth: ^4.16.0
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
